fixed footer alignment

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -48,6 +48,10 @@ footer a:hover {
   color: #222;
 }
 
+footer small {
+  float: left;
+}
+
 footer ul {
   float: right;
   list-style: none;
